# pathfinding

./: readme.md  setup.cfg
documentation/: data.html  interface.html
src/: __init__.py  algorithm.py  astar.py  bfs.py  colors.py  config.dictionary  dfs.py  dijkstra.py  greedy.py  interface.py  main.py
src/project_package_MIKOLAJ_MROZIUK.egg-info/: PKG-INFO  SOURCES.txt
tests/: tests.py
