[metadata]
name = project-package-MIKOLAJ-MROZIUK
version = 0.0.1
author = Mikołaj Mroziuk
author_email = 302079@uwr.edu.pl
description = python lab project
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src